# coo

./: .gitmodules  CMakeLists.txt  CMakeLists_Mac.txt  CMakeLists_Windows.txt  LICENSE  README.md  unix_build.sh
assets/shaders/: fsq.vert  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  lighting.frag  simple.frag  texture_display.frag  ui.frag  ui.vert
cmake/: MacOS.cmake  ShaderCompilation.cmake  SpirvAndShaderc.cmake  Windows.cmake
src/: main.cpp
src/core/: application.cpp  application.h  buffer.h  camera.cpp  camera.h  engine_utils.cpp  engine_utils.h  frame_info.h  game_object.cpp  game_object.h  layer.h  layer_stack.cpp  layer_stack.h  model.cpp  model.h  platform_detection.h  platform_path.h  scene.cpp  scene.h  uuid.cpp  uuid.h  window.cpp  window.h
src/core/event/: event.h  key_event.h  mouse_event.h  window_event.h
src/ui/: imgui_vulkan_dock_space.cpp  imgui_vulkan_dock_space.h  imgui_vulkan_renderer.cpp  imgui_vulkan_renderer.h  imgui_vulkan_viewport.cpp  imgui_vulkan_viewport.h
src/vulkan/: irenderer.h  renderable_interfaces.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_context.cpp  vulkan_context.h  vulkan_deferred_renderer.cpp  vulkan_deferred_renderer.h  vulkan_descriptors.cpp  vulkan_descriptors.h  vulkan_device.cpp  vulkan_device.h  vulkan_fence.cpp  vulkan_fence.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h  vulkan_image.cpp  vulkan_image.h  vulkan_image_utils.cpp  vulkan_image_utils.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_logical_device.cpp  vulkan_logical_device.h  vulkan_material.cpp  vulkan_material.h  vulkan_material_layout.cpp  vulkan_material_layout.h  vulkan_model.cpp  vulkan_model.h  vulkan_physical_device.cpp  vulkan_physical_device.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_renderer.cpp  vulkan_renderer.h  (+17 more)
src/vulkan/render_passes/: gbuffer_render_pass.cpp  gbuffer_render_pass.h  lighting_render_pass.cpp  lighting_render_pass.h  render_graph.h  render_graph_resource_declarations.h  render_pass.h  render_pass_resource.h  scene_composition_pass.cpp  scene_composition_pass.h  swapchain_pass.cpp  swapchain_pass.h  swapchain_render_pass.h  ui_render_pass.cpp  ui_render_pass.h
src/vulkan/render_passes/render_pass_resources/: all_resources.h  buffer_resource.h  command_buffer_resource.h  fence_resource.h  framebuffer_resource.h  graphics_pipeline_resource.h  image_resource.h  image_view_resource.h  material_layout_resource.h  material_resource.h  render_pass_object_resource.h  semaphore_resource.h  shader_resource.h  texture_resource.h
